# opensmu

./: .gitignore  IVdata2025_07_28_15_38_56.txt  LICENSE  MVP_ARCHITECTURE_README.md  README.md  RTdata2025_07_28_15_39_08.txt  __main__.py  application_logic.py  main_window.py  mainwindow.py  oldwindow.py  pyproject.toml  requirements.txt  run.py  test_config_save_load.py
.github/: FUNDING.yml
config/: CONFIGURATION_README.md  config.json
devices/: agilent_b2900.py  keithley2450.py  keithley24xx.py  keithley2611.py  keithley26xxab.py  keysightB2900.py  smu_base.py  smu_simulation.py
installer/: opensmu.spec  opensmu_installer.iss
model/: __init__.py  measurement_data.py  smu_config.py  smu_measurement.py  smu_model.py  smu_state.py
oldversionbackup/: __main__.py
presenter/: __init__.py  main_presenter.py
test/: geometry.py  scratch.py  testView.py  test_config_save_load.py  test_measurement_data.py  test_mvp.py  test_simulation_driver.py  test_smu_selection.py  test_state_machine.py  test_view.py
view/: main_view.py  view.py
view/components/: config_dialog.py  file_settings_widget.py  iv_settings_widget.py  rt_settings_widget.py  smu_control_widget.py
