[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "opensmu"
version = "0.1.0"
description = "Open-source Python desktop app for IV sweep and real-time current measurements with multiple SMU hardware backends"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Thanh Chien Nguyen" }]
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15",
    "pyvisa>=1.13",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
opensmu = "run:main"

[tool.setuptools.packages.find]
exclude = ["test*", "oldversionbackup*"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
